apps/media/notifiarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: notifiarr
    app.kubernetes.io/name: notifiarr
  name: notifiarr
  namespace: media
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: notifiarr
    app.kubernetes.io/name: notifiarr
  type: ClusterIP
